# megadetector-desktop

./: CONTRIBUTING.md  README.md  app.py  azure-pipelines.yml  conda_environment.yml  linux.spec  macos.spec  pyproject.toml  setup.py  win.spec
.github/workflows/: build-mac.yml  build-windows.yml
