[tool.poetry]
name = "megadetector-desktop"
version = "0.0.0"
description = "MegaDetector Desktop Application"
authors = ["Ben Evans <ben@bluechimp.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
camtrapml = "0.3.0"

[tool.poetry.dev-dependencies]
pyinstaller = "^5.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
